fixed anchor empty space click

--- a/index.html
+++ b/index.html
@@ -189,32 +189,65 @@
       <div class="inner_footer">
         <div class="footer_section">
           <h4 class="footer_section_header">Abstract</h4>
-          <a href="https://google.com" class="footer_link">Start Trial</a>
-          <a href="https://google.com" class="footer_link">Pricing</a>
-          <a href="https://google.com" class="footer_link">Download</a>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Start Trial</a>
+          </div>
+
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Pricing</a>
+          </div>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Download</a>
+          </div>
         </div>
 
         <div class="footer_section">
           <h4 class="footer_section_header">Resources</h4>
-          <a href="https://google.com" class="footer_link">Blog</a>
-          <a href="https://google.com" class="footer_link">Help Center</a>
-          <a href="https://google.com" class="footer_link">Release Notes</a>
-          <a href="https://google.com" class="footer_link">Status</a>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Blog</a>
+          </div>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Help Center</a>
+          </div>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Release Notes</a>
+          </div>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Status</a>
+          </div>
         </div>
         <div class="footer_section">
           <h4 class="footer_section_header">Community</h4>
-          <a href="https://google.com" class="footer_link">Twitter</a>
-          <a href="https://google.com" class="footer_link">LinkedIn</a>
-          <a href="https://google.com" class="footer_link">Facebook</a>
-          <a href="https://google.com" class="footer_link">Dribble</a>
-          <a href="https://google.com" class="footer_link">Podcast</a>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Twitter</a>
+          </div>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">LinkedIn</a>
+          </div>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Facebook</a>
+          </div>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Dribble</a>
+          </div>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Podcast</a>
+          </div>
         </div>
         <div class="footer_section">
           <h4 class="footer_section_header">Company</h4>
-          <a href="https://google.com" class="footer_link">About Us</a>
-          <a href="https://google.com" class="footer_link">Careers</a>
-          <a href="https://google.com" class="footer_link">Legal</a>
-          <h4 class="footer_contact_header">Contact Us</h4>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">About Us</a>
+          </div>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Careers</a>
+          </div>
+          <div class="link_wrapper">
+            <a href="https://google.com" class="footer_link">Legal</a>
+          </div>
+          <div class="link_wrapper">
+            <h4 class="footer_contact_header">Contact Us</h4>
+          </div>
           <p class="contact_email">info@contact.com</p>
         </div>
       </div>
