--- a/menus/menus.html
+++ b/menus/menus.html
@@ -4,35 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Working with Objects</title>
-    <link rel="stylesheet" href="assets/styles/app.css" />
-    <script src="assets/scripts/objects.js" defer></script>
+    <title>Menus</title>
+    <link rel="stylesheet" href="menus_style.css" />
   </head>
-  <body>
-    <section id="user-input" class="card">
-      <div class="control">
-        <label for="title">Favorite Movie</label>
-        <input type="text" id="title" />
-      </div>
-      <div class="inline-controls">
-        <div class="control">
-          <label for="extra-name">Extra Information (Name)</label>
-          <input type="text" id="extra-name" />
+  <div class="menu-grid">
+    <div class="out">
+      <input type="checkbox" id="checkID" />
+
+      <div class="outer">
+        <div class="span-div">
+          <label for="checkID"></label>
+          <span class="bar bar2"></span>
+          <span class="bar bar3"></span>
+          <span class="bar bar1"></span>
         </div>
-        <div class="control">
-          <label for="extra-value">Extra Information (Value)</label>
-          <input type="text" id="extra-value" />
+
+        <div class="link-div">
+          <a href="#" class="link"> MENU</a>
+          <a href="#" class="link"> ABOUT</a>
+          <a href="#" class="link"> CONTACT</a>
         </div>
       </div>
-      <button id="add-movie-btn">Add Movie</button>
-    </section>
-    <section id="filter" class="card">
-      <label for="filter-title">Filter by Title</label>
-      <input type="text" id="filter-title" />
-      <button id="search-btn">Search</button>
-    </section>
-    <ul id="movie-list" class="card">
-      <li>test</li>
-    </ul>
-  </body>
+    </div>
+    <div class="out"></div>
+  </div>
 </html>
