--- a/menus/menus.html
+++ b/menus/menus.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Menus</title>
-    <link rel="stylesheet" href="menus_style.css" />
+    <link rel="stylesheet" href="./menus_style.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <div class="menu-grid">
     <div class="out">
@@ -26,6 +33,8 @@
         </div>
       </div>
     </div>
-    <div class="out"></div>
+    <div class="out">
+      <p>TESTING asdasd 1234</p>
+    </div>
   </div>
 </html>
