--- a/menus/menus.html
+++ b/menus/menus.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div class="out">
-      <p>TESTING asdasd 1234</p>
+      <p>TEMP TEXT</p>
     </div>
   </div>
 </html>
