accordion menu added

--- a/menus/menus.html
+++ b/menus/menus.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Menus</title>
+
     <link rel="stylesheet" type="text/css" href="menus_style.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -15,26 +16,33 @@
     />
   </head>
   <div class="menu-grid">
-    <div class="out">
+    <div class="menu-outer-div">
       <input type="checkbox" id="checkID" />
-
-      <div class="outer">
-        <div class="span-div">
-          <label for="checkID"></label>
+      <div class="inner-m1">
+        <div class="span-div-m1">
+          <label class="label-m1" for="checkID"></label>
           <span class="bar bar2"></span>
           <span class="bar bar3"></span>
           <span class="bar bar1"></span>
         </div>
-
-        <div class="link-div">
-          <a href="#" class="link"> MENU</a>
-          <a href="#" class="link"> ABOUT</a>
-          <a href="#" class="link"> CONTACT</a>
+        <div class="link-div-m1">
+          <a href="#" class="link-m1"> MENU</a>
+          <a href="#" class="link-m1"> ABOUT</a>
+          <a href="#" class="link-m1"> CONTACT</a>
         </div>
       </div>
     </div>
-    <div class="out">
-      <p>TEMP TEXT</p>
+    <div class="menu-outer-div">
+      <button class="accordion-m2">menu</button>
+      <div class="inner-m2">
+        <p class="inner-text-m2">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci
+          odit optio unde veniam laudantium omnis a maxime, illum minus nulla
+          consectetur aperiam ipsa alias quas laboriosam cumque, commodi aliquid
+          inventore?
+        </p>
+      </div>
     </div>
   </div>
+  <script type="text/javascript" src="script.js"></script>
 </html>
