menu phone click fix

--- a/menus/menus.html
+++ b/menus/menus.html
@@ -36,10 +36,13 @@
       <button class="accordion-m2">menu</button>
       <div class="inner-m2">
         <p class="inner-text-m2">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci
-          odit optio unde veniam laudantium omnis a maxime, illum minus nulla
-          consectetur aperiam ipsa alias quas laboriosam cumque, commodi aliquid
-          inventore?
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+        </p>
+      </div>
+      <button class="accordion-m2">menu</button>
+      <div class="inner-m2">
+        <p class="inner-text-m2">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit.
         </p>
       </div>
     </div>
