added infinite side scroller

--- a/menus/menus.html
+++ b/menus/menus.html
@@ -46,6 +46,25 @@
         </p>
       </div>
     </div>
+    <div class="menu-outer-div">
+      <div class="div-m3">
+        <button class="scroll-btn-m3" id="back-m3"></button>
+        <div class="scroll-outer-m3">
+          <div class="scroll-content-m3 red-m3">1</div>
+          <div class="scroll-content-m3 green-m3">2</div>
+          <div class="scroll-content-m3 yellow-m3">3</div>
+          <div class="scroll-content-m3 white-m3">4</div>
+          <div class="scroll-content-m3 blue-m3">5</div>
+          <!--duplicate items-->
+          <div class="scroll-content-m3 red-m3">1</div>
+          <div class="scroll-content-m3 green-m3">2</div>
+          <div class="scroll-content-m3 yellow-m3">3</div>
+          <div class="scroll-content-m3 white-m3">4</div>
+          <div class="scroll-content-m3 blue-m3">5</div>
+        </div>
+        <button class="scroll-btn-m3" id="forward-m3"></button>
+      </div>
+    </div>
   </div>
   <script type="text/javascript" src="script.js"></script>
 </html>
