added tabbed menu

--- a/menus/menus.html
+++ b/menus/menus.html
@@ -65,6 +65,23 @@
         <button class="scroll-btn-m3" id="forward-m3"></button>
       </div>
     </div>
+
+    <div class="menu-outer-div">
+      <div class="menu-inner-m4">
+        <div class="buttons-m4">
+          <button class="btn-m4 btn-active-m4" data-tab="tab1-m4">TAB 1</button>
+          <button class="btn-m4" data-tab="tab2-m4">TAB 2</button>
+          <button class="btn-m4" data-tab="tab3-m4">TAB 3</button>
+        </div>
+        <div class="text-m4">
+          <div class="tab-m4 tab-active-m4" id="tab1-m4">
+            TAB1 - Text for tab 1.
+          </div>
+          <div class="tab-m4" id="tab2-m4">TAB2 - Text for tab 2.</div>
+          <div class="tab-m4" id="tab3-m4">TAB3 - Text for tab 3.</div>
+        </div>
+      </div>
+    </div>
   </div>
   <script type="text/javascript" src="script.js"></script>
 </html>
