--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
     <main>
       <h1>Welcome to My Website</h1>
+      <a href="dragNdrop_planner/index.html">NEXT</a>
+      <a href="menus/menus.html">NEXT</a>
     </main>
     <script src="index.js"></script>
   </body>
