--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Website</title>
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" href="./favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="./main.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+    />
   </head>
   <body>
-    <main>
-      <h1>Welcome to My Website</h1>
-      <a href="dragNdrop_planner/index.html">NEXT</a>
-      <a href="menus/menus.html">NEXT</a>
-    </main>
+    <div class="pages-div">
+      <a href="dragNdrop_planner/index.html">Demo Planner List</a>
+      <a href="menus/menus.html">Menu templates</a>
+      <a href="ExampleWebsite01/index.html">Example Website 01</a>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
