HTTP request demo page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="pages-div">
+      <a href="httpDemo/index.html">HTTP Request Demo</a>
       <a href="dragNdrop_planner/index.html">Demo Planner List</a>
       <a href="menus/menus.html">Menu templates</a>
       <a href="ExampleWebsite01/index.html">Example Website 01</a>
